@@ -1,6 +1,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix crash when creating torrents and optimizing file order with pad files
 	* disable support for large MTUs in uTP until it is more reliable
 	* expose post_torrent_updates and state_update_alert to python bindings
 	* fix incorrect SSL error messages
